--- a/styles.css
+++ b/styles.css
@@ -61,9 +61,11 @@ td[data-building="cabin"]:before {
 	content: "^^";
 }
 td[data-unit="worker"]:after {
+	cursor: pointer;
 	content: ":)";
 }
 table[data-action="fetchWood"]#map td[data-tile-type="forest"] {
+	cursor: pointer;
 	border: 1px solid red;
 }
 td.selected {
@@ -85,4 +87,7 @@ div#popup {
     margin-left: 350px;
 	border: 1px solid black;
 	padding: 5px;
+}
+a {
+	cursor: pointer;
 }
