--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,9 @@ body[data-action="fetchWater"] table#map td[data-tile-type="water"] {
 	cursor: pointer;
 	border: 1px solid red;
 }
+body[data-action="fetchWood"] td.selected, body[data-action="fetchWater"] td.selected {
+	border: 1px solid black;
+}
 td.selected {
 	border: 1px solid red;
 }
@@ -119,7 +122,7 @@ div#popup {
 a {
 	cursor: pointer;
 }
-body[data-action="goto"] li.goto {
+body[data-action="goto"] li.goto, body[data-action="fetchWater"] li.fetchWater, body[data-action="fetchWood"] li.fetchWood {
 	background: black;
 	color: white;
 }
